[Findbugs] Fix issues detected by findbugs